Add java-openjfx dep, fix launch script with module path